Fixed socials icons on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ padding-right: 0;
   }
   .social-icons {
     font-size: 6rem;
-    margin-right: 20px;
+    margin-right: 25px;
   }
 
   #myBtn {
